--- a/Benjamin/PhonBand/SnO2_ph/scf_SnO2.in
+++ b/Benjamin/PhonBand/SnO2_ph/scf_SnO2.in
@@ -8,12 +8,12 @@
     outdir='./'
  /
  &system
-    ibrav=  6 						! tetragonal primitive
-    nat=  6	
-    ntyp= 2
-    celldm(1)=9.13701
-    celldm(3)=0.67359
-    ecutwfc = 95					! 20
+    ibrav = 6 						! tetragonal primitive
+    nat   = 6
+    ntyp  = 2
+    celldm(1)=9.137032968
+    celldm(3)=0.671597737
+    ecutwfc = 75					! 20
    ! ecutrho=80.0 					! default = 4*ecutwfc
    ! nbnd=8 						! default = insulator: #valence bands, metals :+20%
    ! occupations='fixed'
@@ -21,21 +21,21 @@
  &electrons
    ! mixing_mode = 'plain'  				! = default
    ! mixing_beta = 0.5
-    conv_thr =  1.0d-20
+     conv_thr =  1.0d-20
  /
  &ions
  /
  &cell
  /
-ATOMIC_SPECIES 
+ATOMIC_SPECIES
  Sn 118.71 Sn_PBE.upf
  O  15.999 O_PBE.upf
-ATOMIC_POSITIONS crystal
- Sn  0.00 0.00 0.00
- Sn  0.50 0.50 0.50
- O   0.806 0.193  0.500
- O   0.193 0.806 0.500
- O   0.306 0.306 0.000
- O   0.693 0.693 0.000
+ ATOMIC_POSITIONS (crystal)
+ Sn      -0.000331970  -0.000331970   0.000000000
+ Sn       0.499667480   0.499667480   0.500000000
+ O        0.806369198   0.192961781   0.500000000
+ O        0.192961781   0.806369198   0.500000000
+ O        0.306370463   0.306370463   0.000000000
+ O        0.692963048   0.692963048   0.000000000
 K_POINTS automatic
-  24 24 24 0 0 0
+  4 4 4 0 0 0
