--- a/ElectronPhonon/EPW/scf.in
+++ b/ElectronPhonon/EPW/scf.in
@@ -1,7 +1,7 @@
 &control
     calculation = 'scf'
     restart_mode='from_scratch'				 ! = default value
-    prefix='SnO2-epw'
+    prefix='SnO2'
     tstress = .true.					 ! calculate stresses
     tprnfor = .true.					 ! calculate forces
     pseudo_dir = '../../Pseudo_potentials'
