--- a/ElectronPhonon/EPW/nscf.in
+++ b/ElectronPhonon/EPW/nscf.in
@@ -1,7 +1,7 @@
-&control
+cf&control
     calculation = 'nscf'
     restart_mode='from_scratch'				 ! = default value
-    prefix='epw'
+    prefix='SnO2'
     tstress = .true.					 ! calculate stresses
     tprnfor = .true.					 ! calculate forces
     pseudo_dir = '../../Pseudo_potentials'
@@ -11,9 +11,9 @@
     ibrav = 6 						! tetragonal primitive
     nat   = 6
     ntyp  = 2
-    celldm(1)=9.137032968
-    celldm(3)=0.671597737
-    ecutwfc = 75					! 20
+    celldm(1)= 9.13358018467
+    celldm(3)= 0.671788693
+    ecutwfc = 80					! 20
    ! ecutrho=80.0 					! default = 4*ecutwfc
     nbnd = 28 						! default = insulator: #valence bands, metals :+20%
    occupations='smearing'
@@ -25,7 +25,7 @@
  &electrons
    ! mixing_mode = 'plain'  				! = default
    ! mixing_beta = 0.5
-     conv_thr =  1.0d-20
+     conv_thr =  1.0d-12
  /
  &ions
  /
@@ -34,16 +34,17 @@
 ATOMIC_SPECIES
  Sn 118.71 Sn_PBE.upf
  O  15.999 O_PBE.upf
- ATOMIC_POSITIONS (crystal)
- Sn      -0.000331970  -0.000331970   0.000000000
- Sn       0.499667480   0.499667480   0.500000000
- O        0.806369198   0.192961781   0.500000000
- O        0.192961781   0.806369198   0.500000000
- O        0.306370463   0.306370463   0.000000000
- O        0.692963048   0.692963048   0.000000000
+ ATOMIC_POSITIONS crystal
+Sn      -0.000330617  -0.000330617   0.000000000
+Sn       0.499669531   0.499669531   0.500000000
+O        0.806361865   0.192964752   0.500000000
+O        0.192964752   0.806361865   0.500000000
+O        0.306365789   0.306365789   0.000000000
+O        0.692968682   0.692968682   0.000000000
 
 
 K_POINTS crystal
+  216
   0.0000000000 0.0000000000 0.0000000000 0.0046296296 
   0.0000000000 0.0000000000 0.1666666667 0.0046296296 
   0.0000000000 0.0000000000 0.3333333333 0.0046296296 
